User-List Page with Filters & Refresh Token Logic Verified.

--- a/src/UI/Angular/src/assets/i18n/de.json
+++ b/src/UI/Angular/src/assets/i18n/de.json
@@ -120,5 +120,6 @@
     "checkbox": "Kontrollkästchen",
     "skin": "Haut",
     "sticky_header": "Klebrige Kopfzeile",
-    "clone_header": "Kopfzeile klonen"
+    "clone_header": "Kopfzeile klonen",
+    "list_users": "Benutzer"
 }
